k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rc-park-weather
  labels:
    app.kubernetes.io/name: rc-park-weather-forcaster
