k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rc-park-weather-forcaster
  namespace: rc-park-weather
  labels:
    app.kubernetes.io/name: rc-park-weather-forcaster
spec:
  type: ClusterIP
  selector:
    app: rc-park-weather-forcaster
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
